--- a/api/pom.xml
+++ b/api/pom.xml
@@ -179,6 +179,12 @@
             <version>${project.hibernate.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.4.3</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
