Upload de arquivo para MinIO

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -34,11 +34,6 @@ server.error.whitelabel.enabled=false
 spring.jackson.deserialization.fail-on-unknown-properties=false
 spring.jackson.mapper.accept-case-insensitive-enums = true
 
-application.storageType=${STORAGE_TIPO:MinIO}
-application.minioUrl=${MINIO_URL:http://1001.10.100.17:7000}
-application.minioAccessKey=${MINIO_ACCESS_KEY:7VGflrdNf3lomE06}
-application.minioSecretKey=${MINIO_SECRET_KEY:qCR4uzFi5zFwkRCuxXjPhHshZb83nPH2}
-
 logging.pattern.console=%d{HH:mm:ss.SSS} [app=@project.name@] [%t] %-5level %logger{36} - %msg%n
 logging.level.root=INFO
 logging.level.br.com.crptecnologia=${APP_LOGGING_LEVEL:DEBUG}
@@ -108,5 +103,9 @@ spring.rabbitmq.password=Fox789789@!@!
 application.rabbitmq.exchangename=vendas.v1
 
 #Variaveis do MinIO
+application.minioUrl=${MINIO_URL:https://minioapi.3ptecnologia.com.br}
+application.minioAccessKey=${MINIO_ACCESS_KEY:7VGflrdNf3lomE06}
+application.minioSecretKey=${MINIO_SECRET_KEY:qCR4uzFi5zFwkRCuxXjPhHshZb83nPH2}
+
 application.miniIOProperties.bucket=${BUCKET:contabilidade}
 application.miniIOProperties.path=${STORAGE_BUCKET_TEMPORARIO:xmls}
