Upload de arquivo para MinIO

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -12,12 +12,13 @@ application.exibirAutorizacao=${APP_EXIBIR_AUTORIZACAO:true}
 application.ignorarAutorizacao=${APP_IGNORAR_AUTORIZACAO:false}
 application.corsOrigin=${APP_CORS_ORIGEM:http://localhost:4201}
 application.debugEmail=false
+application.tamanhoMaximoAnexo=1024000
 
 #CONFIGURACOES OAUTH
 application.auth.token-url=${OAUTH_TOKEN_URL:https://auth.3ptecnologia.com.br/realms/3p-apps/protocol/openid-connect/token}
 application.auth.logout-url=${OAUTH_LOGOUT_URL:https://auth.3ptecnologia.com.br/realms/3p-apps/protocol/openid-connect/logout}
 application.auth.redirect-logout-url=${OAUTH_REDIRECT_LOGOUT_URL:http://localhost:4201}
-application.auth.client-id=${OAUTH_CLIENT_ID:base}
+application.auth.client-id=${OAUTH_CLIENT_ID:contabilidade}
 application.auth.client-secret=${OAUTH_CLIENT_SECRET:fDB59hxtQmPzcJONDPYOwACx44QTXIX1}
 application.auth.redirect-uri=${OAUTH_REDIRECT_URI:http://localhost:4201/oauth/authorize/callback}
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${OAUTH_RESOURCE_SERVER_ISSUER_URI:https://auth.3ptecnologia.com.br/realms/3p-apps}
@@ -104,8 +105,8 @@ application.rabbitmq.exchangename=vendas.v1
 
 #Variaveis do MinIO
 application.minioUrl=${MINIO_URL:https://minioapi.3ptecnologia.com.br}
-application.minioAccessKey=${MINIO_ACCESS_KEY:7VGflrdNf3lomE06}
-application.minioSecretKey=${MINIO_SECRET_KEY:qCR4uzFi5zFwkRCuxXjPhHshZb83nPH2}
+application.minioAccessKey=${MINIO_ACCESS_KEY:GPltnBHwJtCt831WdvkI}
+application.minioSecretKey=${MINIO_SECRET_KEY:zKraYWBjz6p38ayGrgAG8cYyLK6AMdS28MTR7SbG}
 
 application.miniIOProperties.bucket=${BUCKET:contabilidade}
 application.miniIOProperties.path=${STORAGE_BUCKET_TEMPORARIO:xmls}
