--- a/teste.env
+++ b/teste.env
@@ -9,7 +9,7 @@ APP_CLAIM_NAME=name
 OAUTH_TOKEN_URL=https://auth.3ptecnologia.com.br/realms/3p-apps/protocol/openid-connect/token
 OAUTH_LOGOUT_URL=https://auth.3ptecnologia.com.br/realms/3p-apps/protocol/openid-connect/logout
 OAUTH_REDIRECT_LOGOUT_URL=https://crm-v2.3ptecnologia.com.br
-OAUTH_CLIENT_ID=base
+OAUTH_CLIENT_ID=contabilidade
 OAUTH_CLIENT_SECRET=fDB59hxtQmPzcJONDPYOwACx44QTXIX1
 OAUTH_REDIRECT_URI=https://crm-v2.3ptecnologia.com.br/oauth/authorize/callback
 OAUTH_RESOURCE_SERVER_ISSUER_URI=https://auth.3ptecnologia.com.br/realms/3p-apps
