Configuração do schema contabilidade

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -66,8 +66,8 @@ management.endpoints.web.exposure.include=${ACTUATOR_ENDPOINT_EXPOSE:health,info
 spring.jpa.open-in-view=false
 
 spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//144.126.152.69:1521/XE}
-spring.datasource.username=${DATABASE_USERNAME:base}
-spring.datasource.password=${DATABASE_PASSWORD:base}
+spring.datasource.username=${DATABASE_USERNAME:contabilidade}
+spring.datasource.password=${DATABASE_PASSWORD:contabilidade}
 
 spring.datasource.driver-class-name=${DATABASE_DRIVER_CLASS_NAME:oracle.jdbc.OracleDriver}
 spring.jpa.database-platform=${DATABASE_PLATFORM:org.hibernate.dialect.Oracle12cDialect}
@@ -78,13 +78,13 @@ spring.jpa.properties.org.hibernate.envers.revisionFieldName=rev
 spring.jpa.properties.hibernate.integration.envers.enabled=true
 spring.jpa.show-sql=${DATABASE_SHOW_SQL:true}
 spring.jpa.properties.hibernate.format_sql=${DATABASE_FORMAT_SQL:true}
-spring.jpa.properties.hibernate.default_schema=${DATABASE_SCHEMA:base}
+spring.jpa.properties.hibernate.default_schema=${DATABASE_SCHEMA:contabilidade}
 
 #CONFIGURACAO DE MIGRACAO DE DADOS
 spring.liquibase.enabled=${DATABASE_MIGRATION_ENABLE:true}
 spring.liquibase.change-log=classpath:db/migration/changelog-master.xml
 spring.liquibase.contexts=${DATABASE_MIGRATION_CONTEXT:dev}
-spring.liquibase.default-schema=${DATABASE_SCHEMA:base}
+spring.liquibase.default-schema=${DATABASE_SCHEMA:contabilidade}
 spring.liquibase.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
@@ -101,7 +101,7 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=3p-admin
 spring.rabbitmq.password=Fox789789@!@!
 
-application.rabbitmq.exchangename=vendas.v1
+application.rabbitmq.exchangename=contabilidade.v1
 
 #Variaveis do MinIO
 application.minioUrl=${MINIO_URL:https://minioapi.3ptecnologia.com.br}
