--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -98,6 +98,12 @@
             <artifactId>jackson-dataformat-csv</artifactId>
             <version>2.14.2</version>
         </dependency>
+<!--        Conversor XML        -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.14.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.poi</groupId>
