Processamento do Job

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -76,8 +76,8 @@ spring.jpa.hibernate.ddl-auto=${DATABASE_HIBERNATE_DDL:none}
 spring.jpa.properties.org.hibernate.envers.versionsTableSuffix=_aud
 spring.jpa.properties.org.hibernate.envers.revisionFieldName=rev
 spring.jpa.properties.hibernate.integration.envers.enabled=true
-spring.jpa.show-sql=${DATABASE_SHOW_SQL:true}
-spring.jpa.properties.hibernate.format_sql=${DATABASE_FORMAT_SQL:true}
+spring.jpa.show-sql=${DATABASE_SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=${DATABASE_FORMAT_SQL:false}
 spring.jpa.properties.hibernate.default_schema=${DATABASE_SCHEMA:contabilidade}
 
 #CONFIGURACAO DE MIGRACAO DE DADOS
@@ -110,3 +110,6 @@ application.minioSecretKey=${MINIO_SECRET_KEY:zKraYWBjz6p38ayGrgAG8cYyLK6AMdS28M
 
 application.miniIOProperties.bucket=${BUCKET:contabilidade}
 application.miniIOProperties.path=${STORAGE_BUCKET_TEMPORARIO:xmls}
+
+#Configurações do JOB
+job.milisegundos_limite_processamento = 300000
