--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.7"
 
 services:
   oracle-xe:
+    container_name: oracle-xe
     image: container-registry.oracle.com/database/express:21.3.0-xe
     ports:
       - 1521:1521
