Execução imagem docker produção

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -112,4 +112,4 @@ application.miniIOProperties.bucket=${BUCKET:contabilidade}
 application.miniIOProperties.path=${STORAGE_BUCKET_TEMPORARIO:xmls}
 
 #Configurações do JOB
-job.milisegundos_limite_processamento = 300000
+job.milisegundos_limite_processamento = ${MILISEGUNDOS_JOB_PROC_XML:60000}
