Criação tabela aliquota diferenciada

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -65,7 +65,7 @@ management.endpoints.web.exposure.include=${ACTUATOR_ENDPOINT_EXPOSE:health,info
 #CONFIGURACOES DE BANCO DE DADOS
 spring.jpa.open-in-view=false
 
-spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//localhost:1521/XE}
+spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//144.126.152.69:1521/XE}
 spring.datasource.username=${DATABASE_USERNAME:contabilidade}
 spring.datasource.password=${DATABASE_PASSWORD:contabilidade}
 
