Criação das tabelas

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -72,12 +72,12 @@ spring.datasource.password=${DATABASE_PASSWORD:clinica}
 spring.datasource.driver-class-name=${DATABASE_DRIVER_CLASS_NAME:oracle.jdbc.OracleDriver}
 spring.jpa.database-platform=${DATABASE_PLATFORM:org.hibernate.dialect.Oracle12cDialect}
 
-spring.jpa.hibernate.ddl-auto=${DATABASE_HIBERNATE_DDL:none}
+spring.jpa.hibernate.ddl-auto=${DATABASE_HIBERNATE_DDL:validate}
 spring.jpa.properties.org.hibernate.envers.versionsTableSuffix=_aud
 spring.jpa.properties.org.hibernate.envers.revisionFieldName=rev
 spring.jpa.properties.hibernate.integration.envers.enabled=true
-spring.jpa.show-sql=${DATABASE_SHOW_SQL:false}
-spring.jpa.properties.hibernate.format_sql=${DATABASE_FORMAT_SQL:false}
+spring.jpa.show-sql=${DATABASE_SHOW_SQL:true}
+spring.jpa.properties.hibernate.format_sql=${DATABASE_FORMAT_SQL:true}
 spring.jpa.properties.hibernate.default_schema=${DATABASE_SCHEMA:clinica}
 
 #CONFIGURACAO DE MIGRACAO DE DADOS
