--- a/Docker/prod.env
+++ b/Docker/prod.env
@@ -1,17 +1,17 @@
-API_URL=https://clemente-api.3ptecnologia.com.br
+API_URL=https://clinica-api.3ptecnologia.com.br
 API_ENV=Teste
 APP_DEFAULT_USER_NAME=Base
 APP_EXIBIR_EXCEPTION_STACKTRACE=true
 APP_EXIBIR_AUTORIZACAO=true
 APP_IGNORAR_AUTORIZACAO=false
-APP_CORS_ORIGEM=https://clemente-app.3ptecnologia.com.br
+APP_CORS_ORIGEM=https://clinica-app.3ptecnologia.com.br
 APP_CLAIM_NAME=name
 OAUTH_TOKEN_URL=https://auth.3ptecnologia.com.br/realms/3p-apps/protocol/openid-connect/token
 OAUTH_LOGOUT_URL=https://auth.3ptecnologia.com.br/realms/3p-apps/protocol/openid-connect/logout
-OAUTH_REDIRECT_LOGOUT_URL=https://clemente-app.3ptecnologia.com.br
+OAUTH_REDIRECT_LOGOUT_URL=https://clinica-app.3ptecnologia.com.br
 OAUTH_CLIENT_ID=contabilidade
 OAUTH_CLIENT_SECRET=fDB59hxtQmPzcJONDPYOwACx44QTXIX1
-OAUTH_REDIRECT_URI=https://clemente-app.3ptecnologia.com.br/oauth/authorize/callback
+OAUTH_REDIRECT_URI=https://clinica-app.3ptecnologia.com.br/oauth/authorize/callback
 OAUTH_RESOURCE_SERVER_ISSUER_URI=https://auth.3ptecnologia.com.br/realms/3p-apps
 SERVER_PORT=8080
 CONTEXT_PATH=/
@@ -27,9 +27,9 @@ OPEN_API_ACTUATOR_ENABLE=true
 ACTUATOR_ENABLE=true
 ACTUATOR_ENDPOINT_EXPOSE=heath,info
 DATABASE_CONNECTION_STRING=jdbc:oracle:thin:@//144.126.152.69:1521/XE
-DATABASE_USERNAME=contabilidade
-DATABASE_PASSWORD=contabilidade
-DATABASE_SCHEMA=contabilidade
+DATABASE_USERNAME=clinica
+DATABASE_PASSWORD=clinica
+DATABASE_SCHEMA=clinica
 DATABASE_DRIVER_CLASS_NAME=oracle.jdbc.OracleDriver
 DATABASE_PLATFORM=org.hibernate.dialect.Oracle12cDialect
 DATABASE_HIBERNATE_DDL=none
@@ -41,6 +41,6 @@ TZ=America/Araguaina
 MINIO_URL=https://minioapi.3ptecnologia.com.br
 MINIO_ACCESS_KEY=GPltnBHwJtCt831WdvkI
 MINIO_SECRET_KEY=zKraYWBjz6p38ayGrgAG8cYyLK6AMdS28MTR7SbG
-BUCKET=contabilidade-prod
+BUCKET=clinica-prod
 STORAGE_BUCKET_TEMPORARIO=xmls
 MILISEGUNDOS_JOB_PROC_XML=300000
