Habilitação de testes

--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -46,7 +46,7 @@ spring.jpa.properties.org.hibernate.envers.revisionFieldName=rev
 spring.jpa.properties.hibernate.integration.envers.enabled=false
 spring.jpa.properties.hibernate.default_schema=public
 #descomente para caso precise realizar um seed para o ambiente de testes
-spring.sql.init.data-locations=classpath:carga-dados.sql
+#spring.sql.init.data-locations=classpath:carga-dados.sql
 spring.jpa.defer-datasource-initialization=true
 
 #CONFIGURAÇÃO DE MIGRAÇÃO DE DADOS
@@ -69,3 +69,19 @@ spring.main.allow-bean-definition-overriding=true
 #CONFIGURAÇÃO CACHE DE PERMISSÃO
 caches.stores[0].name=UserPermissions
 caches.stores[0].expiryInMinutes=30
+
+#CONFIGURACOES RABBITMQ
+spring.rabbitmq.host=144.126.152.69
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=3p-admin
+spring.rabbitmq.password=Fox789789@!@!
+
+application.rabbitmq.exchangename=clinica.v1
+
+#Variaveis do MinIO
+application.minioUrl=${MINIO_URL:https://minioapi.3ptecnologia.com.br}
+application.minioAccessKey=${MINIO_ACCESS_KEY:GPltnBHwJtCt831WdvkI}
+application.minioSecretKey=${MINIO_SECRET_KEY:zKraYWBjz6p38ayGrgAG8cYyLK6AMdS28MTR7SbG}
+
+application.miniIOProperties.bucket=${BUCKET:clinica}
+application.miniIOProperties.path=${STORAGE_BUCKET_TEMPORARIO:storage}
