Estrutura de Controller e Teste para cliente

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     </parent>
 
     <groupId>br.com.tresptecnologia</groupId>
-    <artifactId>vendas-backend</artifactId>
+    <artifactId>clinica-api</artifactId>
     <packaging>pom</packaging>
     <version>${revision}</version>
 
