--- a/tools-annotations/pom.xml
+++ b/tools-annotations/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>br.com.tresptecnologia</groupId>
-        <artifactId>vendas-backend</artifactId>
+        <artifactId>clinica-api</artifactId>
         <version>${revision}</version>
     </parent>
 
