--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -78,8 +78,8 @@ spring.jpa.hibernate.ddl-auto=${DATABASE_HIBERNATE_DDL:validate}
 spring.jpa.properties.org.hibernate.envers.versionsTableSuffix=_aud
 spring.jpa.properties.org.hibernate.envers.revisionFieldName=rev
 spring.jpa.properties.hibernate.integration.envers.enabled=true
-spring.jpa.show-sql=${DATABASE_SHOW_SQL:true}
-spring.jpa.properties.hibernate.format_sql=${DATABASE_FORMAT_SQL:true}
+spring.jpa.show-sql=${DATABASE_SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=${DATABASE_FORMAT_SQL:false}
 spring.jpa.properties.hibernate.default_schema=${DATABASE_SCHEMA:clinica}
 
 #CONFIGURACAO DE MIGRACAO DE DADOS
