Aplicando mudança no carregamento dos procedimentos;

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -10,7 +10,7 @@ application.default-app-name=${APP_DEFAULT_USER_NAME:Base}
 application.exibirStacktrace=${APP_EXIBIR_EXCEPTION_STACKTRACE:true}
 application.exibirAutorizacao=${APP_EXIBIR_AUTORIZACAO:true}
 application.ignorarAutorizacao=${APP_IGNORAR_AUTORIZACAO:false}
-application.corsOrigin=${APP_CORS_ORIGEM:http://localhost:4201}
+application.corsOrigin=${APP_CORS_ORIGEM:*}
 application.debugEmail=false
 application.tamanhoMaximoAnexo=1024000
 
@@ -65,8 +65,8 @@ management.endpoints.web.exposure.include=${ACTUATOR_ENDPOINT_EXPOSE:health,info
 #CONFIGURACOES DE BANCO DE DADOS
 spring.jpa.open-in-view=false
 
-spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//localhost:1521/XE}
-#spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//144.126.152.69:1521/XE}
+#spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//localhost:1521/XE}
+spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//144.126.152.69:1521/XE}
 #spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//localhost:1521/XE}
 spring.datasource.username=${DATABASE_USERNAME:clinica}
 spring.datasource.password=${DATABASE_PASSWORD:clinica}
