Mantendo padrão de acesso aos eventos

--- a/Docker/prod.env
+++ b/Docker/prod.env
@@ -9,8 +9,8 @@ APP_CLAIM_NAME=name
 OAUTH_TOKEN_URL=https://auth.3ptecnologia.com.br/realms/3p-apps/protocol/openid-connect/token
 OAUTH_LOGOUT_URL=https://auth.3ptecnologia.com.br/realms/3p-apps/protocol/openid-connect/logout
 OAUTH_REDIRECT_LOGOUT_URL=https://clinica-app.3ptecnologia.com.br
-OAUTH_CLIENT_ID=contabilidade
-OAUTH_CLIENT_SECRET=fDB59hxtQmPzcJONDPYOwACx44QTXIX1
+OAUTH_CLIENT_ID=clinica
+OAUTH_CLIENT_SECRET=EEqhQI99Iv8YsOkVzQj0ybMglhYVLF7a
 OAUTH_REDIRECT_URI=https://clinica-app.3ptecnologia.com.br/oauth/authorize/callback
 OAUTH_RESOURCE_SERVER_ISSUER_URI=https://auth.3ptecnologia.com.br/realms/3p-apps
 SERVER_PORT=8080
@@ -27,9 +27,9 @@ OPEN_API_ACTUATOR_ENABLE=true
 ACTUATOR_ENABLE=true
 ACTUATOR_ENDPOINT_EXPOSE=heath,info
 DATABASE_CONNECTION_STRING=jdbc:oracle:thin:@//144.126.152.69:1521/XE
-DATABASE_USERNAME=clinica
-DATABASE_PASSWORD=clinica
-DATABASE_SCHEMA=clinica
+DATABASE_USERNAME=clinica_prod
+DATABASE_PASSWORD=clinica_prod
+DATABASE_SCHEMA=clinica_prod
 DATABASE_DRIVER_CLASS_NAME=oracle.jdbc.OracleDriver
 DATABASE_PLATFORM=org.hibernate.dialect.Oracle12cDialect
 DATABASE_HIBERNATE_DDL=none
