--- a/Docker/prod.env
+++ b/Docker/prod.env
@@ -1,4 +1,4 @@
-API_URL=https://clinica-api.3ptecnologia.com.br
+API_URL=https://clinica-api-lenovo.3ptecnologia.com.br
 API_ENV=Teste
 APP_DEFAULT_USER_NAME=Base
 APP_EXIBIR_EXCEPTION_STACKTRACE=true
