--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -36,11 +36,11 @@ spring.jackson.deserialization.fail-on-unknown-properties=false
 spring.jackson.mapper.accept-case-insensitive-enums = true
 
 logging.pattern.console=%d{HH:mm:ss.SSS} [app=@project.name@] [%t] %-5level %logger{36} - %msg%n
-logging.level.root=INFO
-logging.level.br.com.crptecnologia=${APP_LOGGING_LEVEL:DEBUG}
-logging.level.org.springframework.web= INFO
-logging.level.org.springframework.security= INFO
-logging.level.org.springframework.security.oauth2= INFO
+logging.level.root=${APP_LOGGING_LEVEL:WARN}
+logging.level.br.com.crptecnologia=${APP_LOGGING_LEVEL:WARN}
+logging.level.org.springframework.web=${SPRING-WEB_LOGGING_LEVEL:WARN}
+logging.level.org.springframework.security=${SPRING-SECURITY_LOGGING_LEVEL:WARN}
+logging.level.org.springframework.security.oauth2==${SPRING-SECURITY-OAUTH2_LOGGING_LEVEL:WARN}
 
 spring.devtools.add-properties=${SPRING_DEVTOOLS:false}
 
@@ -65,14 +65,14 @@ management.endpoints.web.exposure.include=${ACTUATOR_ENDPOINT_EXPOSE:health,info
 #CONFIGURACOES DE BANCO DE DADOS
 spring.jpa.open-in-view=false
 
-#spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//localhost:1521/XE}
-spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//144.126.152.69:1521/XE}
+spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//localhost:1521/XE}
+#spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//144.126.152.69:1521/XE}
 #spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//localhost:1521/XE}
 spring.datasource.username=${DATABASE_USERNAME:clinica}
 spring.datasource.password=${DATABASE_PASSWORD:clinica}
 
 spring.datasource.driver-class-name=${DATABASE_DRIVER_CLASS_NAME:oracle.jdbc.OracleDriver}
-spring.jpa.database-platform=${DATABASE_PLATFORM:org.hibernate.dialect.Oracle12cDialect}
+spring.jpa.database-platform=${DATABASE_PLATFORM:org.hibernate.dialect.OracleDialect}
 
 spring.jpa.hibernate.ddl-auto=${DATABASE_HIBERNATE_DDL:validate}
 spring.jpa.properties.org.hibernate.envers.versionsTableSuffix=_aud
