--- a/Docker/desenv.env
+++ b/Docker/desenv.env
@@ -31,7 +31,7 @@ DATABASE_USERNAME=clinica_prod
 DATABASE_PASSWORD=clinica_prod
 DATABASE_SCHEMA=clinica_prod
 DATABASE_DRIVER_CLASS_NAME=oracle.jdbc.OracleDriver
-DATABASE_PLATFORM=org.hibernate.dialect.Oracle12cDialect
+DATABASE_PLATFORM=org.hibernate.dialect.OracleDialect
 DATABASE_HIBERNATE_DDL=none
 DATABASE_SHOW_SQL=false
 DATABASE_FORMAT_SQL=false
