--- a/Docker/prod.env
+++ b/Docker/prod.env
@@ -26,12 +26,12 @@ OPEN_API_ENABLE=true
 OPEN_API_ACTUATOR_ENABLE=true
 ACTUATOR_ENABLE=true
 ACTUATOR_ENDPOINT_EXPOSE=heath,info
-DATABASE_CONNECTION_STRING=jdbc:oracle:thin:@//144.126.152.69:1521/XE
+DATABASE_CONNECTION_STRING=jdbc:oracle:thin:@//localhost:1521/XE
 DATABASE_USERNAME=clinica_prod
 DATABASE_PASSWORD=clinica_prod
 DATABASE_SCHEMA=clinica_prod
 DATABASE_DRIVER_CLASS_NAME=oracle.jdbc.OracleDriver
-DATABASE_PLATFORM=org.hibernate.dialect.Oracle12cDialect
+DATABASE_PLATFORM=org.hibernate.dialect.OracleDialect
 DATABASE_HIBERNATE_DDL=none
 DATABASE_SHOW_SQL=false
 DATABASE_FORMAT_SQL=false
