--- a/Docker/teste.env
+++ b/Docker/teste.env
@@ -31,7 +31,7 @@ DATABASE_USERNAME=base
 DATABASE_PASSWORD=base
 DATABASE_SCHEMA=base
 DATABASE_DRIVER_CLASS_NAME=oracle.jdbc.OracleDriver
-DATABASE_PLATFORM=org.hibernate.dialect.Oracle12cDialect
+DATABASE_PLATFORM=org.hibernate.dialect.OracleDialect
 DATABASE_HIBERNATE_DDL=none
 DATABASE_SHOW_SQL=false
 DATABASE_FORMAT_SQL=false
