--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -38,9 +38,9 @@ spring.jackson.mapper.accept-case-insensitive-enums = true
 logging.pattern.console=%d{HH:mm:ss.SSS} [app=@project.name@] [%t] %-5level %logger{36} - %msg%n
 logging.level.root=${APP_LOGGING_LEVEL:WARN}
 logging.level.br.com.crptecnologia=${APP_LOGGING_LEVEL:WARN}
-logging.level.org.springframework.web=${SPRING-WEB_LOGGING_LEVEL:WARN}
-logging.level.org.springframework.security=${SPRING-SECURITY_LOGGING_LEVEL:WARN}
-logging.level.org.springframework.security.oauth2==${SPRING-SECURITY-OAUTH2_LOGGING_LEVEL:WARN}
+    logging.level.org.springframework.web=${SPRING-WEB_LOGGING_LEVEL:INFO}
+logging.level.org.springframework.security=${SPRING-SECURITY_LOGGING_LEVEL:INFO}
+logging.level.org.springframework.security.oauth2==${SPRING-SECURITY-OAUTH2_LOGGING_LEVEL:INFO}
 
 spring.devtools.add-properties=${SPRING_DEVTOOLS:false}
 
@@ -112,3 +112,17 @@ application.minioSecretKey=${MINIO_SECRET_KEY:zKraYWBjz6p38ayGrgAG8cYyLK6AMdS28M
 
 application.miniIOProperties.bucket=${BUCKET:clinica}
 application.miniIOProperties.path=${STORAGE_BUCKET_TEMPORARIO:storage}
+
+
+Failed to bind properties under 'logging.level.org.springframework.web' to org.springframework.boot.logging.LogLevel:
+Property: logging.level.org.springframework.web
+Value: "${SPRING-WEB_LOGGING_LEVEL:WARN}"
+Origin: class path resource [application.properties] from app.jar - 41:39
+Reason: failed to convert java.lang.String to org.springframework.boot.logging.LogLevel (caused by java.lang.IllegalArgumentException: No enum constant org.springframework.boot.logging.LogLevel.WEB_LOGGING_LEVEL)
+Action:
+
+INFO
+OFF
+
+E
+WARN
