Certificado; Documentação para geração de certificados;

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -35,6 +35,15 @@ server.error.whitelabel.enabled=false
 spring.jackson.deserialization.fail-on-unknown-properties=false
 spring.jackson.mapper.accept-case-insensitive-enums = true
 
+### Certificado de Segurança
+server.ssl.key-store=classpath:clinicaapi.p12
+server.ssl.key-store-password=Skia@#Nn89s
+server.ssl.key-store-type=pkcs12
+server.ssl.key-alias=clinicaapi
+server.ssl.key-password=Fox789789@!@!
+
+
+
 logging.pattern.console=%d{HH:mm:ss.SSS} [app=@project.name@] [%t] %-5level %logger{36} - %msg%n
 logging.level.root=INFO
 logging.level.br.com.crptecnologia=${APP_LOGGING_LEVEL:DEBUG}
