Configuração da senha do certificado fixo no properties; Configuração para container executar aplicação na porta 8080;

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,7 +3,7 @@ application.env=${API_ENV:@activatedProperties@}
 application.name=@project.name@
 application.version=@project.version@
 application.description=@project.description@
-application.api-url=${API_URL:http://localhost:8070}
+application.api-url=${API_URL:http://localhost:8080}
 application.export-pagination-size=100
 application.resource-report-folder=reports
 application.default-app-name=${APP_DEFAULT_USER_NAME:Base}
@@ -25,7 +25,7 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=${OAUTH_RESOURCE_SERVER_ISS
 
 
 #CONFIGURACOES DO SERVIDOR
-server.port=${SERVER_PORT:8081}
+server.port=${SERVER_PORT:8080}
 server.servlet.context-path=${CONTEXT_PATH:/}
 spring.servlet.multipart.max-file-size=300MB
 spring.servlet.multipart.max-request-size=300MB
@@ -40,16 +40,14 @@ server.ssl.key-store=classpath:clinicaapi.p12
 server.ssl.key-store-password=Skia@#Nn89s
 server.ssl.key-store-type=pkcs12
 server.ssl.key-alias=clinicaapi
-server.ssl.key-password=Fox789789@!@!
-
-
+server.ssl.key-password=Skia@#Nn89s
 
 logging.pattern.console=%d{HH:mm:ss.SSS} [app=@project.name@] [%t] %-5level %logger{36} - %msg%n
-logging.level.root=${APP_LOGGING_LEVEL:WARN}
-logging.level.br.com.crptecnologia=${APP_LOGGING_LEVEL:WARN}
-    logging.level.org.springframework.web=${SPRING-WEB_LOGGING_LEVEL:INFO}
-logging.level.org.springframework.security=${SPRING-SECURITY_LOGGING_LEVEL:INFO}
-logging.level.org.springframework.security.oauth2==${SPRING-SECURITY-OAUTH2_LOGGING_LEVEL:INFO}
+logging.level.root=${APP_LOGGING_LEVEL:DEBUG}
+logging.level.br.com.crptecnologia=${APP_LOGGING_LEVEL:DEBUG}
+logging.level.org.springframework.web=${SPRING-WEB_LOGGING_LEVEL:DEBUG}
+logging.level.org.springframework.security=${SPRING-SECURITY_LOGGING_LEVEL:DEBUG}
+logging.level.org.springframework.security.oauth2==${SPRING-SECURITY-OAUTH2_LOGGING_LEVEL:DEBUG}
 
 spring.devtools.add-properties=${SPRING_DEVTOOLS:false}
 
@@ -76,7 +74,6 @@ spring.jpa.open-in-view=false
 
 spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//localhost:1521/XE}
 #spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//144.126.152.69:1521/XE}
-#spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//localhost:1521/XE}
 spring.datasource.username=${DATABASE_USERNAME:clinica}
 spring.datasource.password=${DATABASE_PASSWORD:clinica}
 
@@ -121,17 +118,3 @@ application.minioSecretKey=${MINIO_SECRET_KEY:zKraYWBjz6p38ayGrgAG8cYyLK6AMdS28M
 
 application.miniIOProperties.bucket=${BUCKET:clinica}
 application.miniIOProperties.path=${STORAGE_BUCKET_TEMPORARIO:storage}
-
-
-Failed to bind properties under 'logging.level.org.springframework.web' to org.springframework.boot.logging.LogLevel:
-Property: logging.level.org.springframework.web
-Value: "${SPRING-WEB_LOGGING_LEVEL:WARN}"
-Origin: class path resource [application.properties] from app.jar - 41:39
-Reason: failed to convert java.lang.String to org.springframework.boot.logging.LogLevel (caused by java.lang.IllegalArgumentException: No enum constant org.springframework.boot.logging.LogLevel.WEB_LOGGING_LEVEL)
-Action:
-
-INFO
-OFF
-
-E
-WARN
