--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -46,8 +46,8 @@ logging.pattern.console=%d{HH:mm:ss.SSS} [app=@project.name@] [%t] %-5level %log
 logging.level.root=${APP_LOGGING_LEVEL:DEBUG}
 logging.level.br.com.crptecnologia=${APP_LOGGING_LEVEL:DEBUG}
 logging.level.org.springframework.web=${SPRING-WEB_LOGGING_LEVEL:DEBUG}
-logging.level.org.springframework.security=${SPRING-SECURITY_LOGGING_LEVEL:DEBUG}
-logging.level.org.springframework.security.oauth2==${SPRING-SECURITY-OAUTH2_LOGGING_LEVEL:DEBUG}
+logging.level.org.springframework.security=${SPRING-SECURITY_LOGGING_LEVEL:ERROR}
+logging.level.org.springframework.security.oauth2==${SPRING-SECURITY-OAUTH2_LOGGING_LEVEL:ERROR}
 
 spring.devtools.add-properties=${SPRING_DEVTOOLS:false}
 
@@ -72,8 +72,8 @@ management.endpoints.web.exposure.include=${ACTUATOR_ENDPOINT_EXPOSE:health,info
 #CONFIGURACOES DE BANCO DE DADOS
 spring.jpa.open-in-view=false
 
-spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//localhost:1521/XE}
-#spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//144.126.152.69:1521/XE}
+#spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//localhost:1521/XE}
+spring.datasource.url=${DATABASE_CONNECTION_STRING:jdbc:oracle:thin:@//144.126.152.69:1521/XE}
 spring.datasource.username=${DATABASE_USERNAME:clinica}
 spring.datasource.password=${DATABASE_PASSWORD:clinica}
 
