Teste de Conversor de HTML para PDF;

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,7 +3,7 @@ application.env=${API_ENV:@activatedProperties@}
 application.name=@project.name@
 application.version=@project.version@
 application.description=@project.description@
-application.api-url=${API_URL:http://localhost:8080}
+application.api-url=${API_URL:https://localhost:8080}
 application.export-pagination-size=100
 application.resource-report-folder=reports
 application.default-app-name=${APP_DEFAULT_USER_NAME:Base}
@@ -20,7 +20,7 @@ application.auth.logout-url=${OAUTH_LOGOUT_URL:https://auth.3ptecnologia.com.br/
 application.auth.redirect-logout-url=${OAUTH_REDIRECT_LOGOUT_URL:http://localhost:4201}
 application.auth.client-id=${OAUTH_CLIENT_ID:clinica}
 application.auth.client-secret=${OAUTH_CLIENT_SECRET:EEqhQI99Iv8YsOkVzQj0ybMglhYVLF7a}
-application.auth.redirect-uri=${OAUTH_REDIRECT_URI:http://localhost:4201/oauth/authorize/callback}
+application.auth.redirect-uri=${OAUTH_REDIRECT_URI:http://127.0.0.1:4201/oauth/authorize/callback}
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${OAUTH_RESOURCE_SERVER_ISSUER_URI:https://auth.3ptecnologia.com.br/realms/3p-apps}
 
 
@@ -46,8 +46,8 @@ logging.pattern.console=%d{HH:mm:ss.SSS} [app=@project.name@] [%t] %-5level %log
 logging.level.root=${APP_LOGGING_LEVEL:DEBUG}
 logging.level.br.com.crptecnologia=${APP_LOGGING_LEVEL:DEBUG}
 logging.level.org.springframework.web=${SPRING-WEB_LOGGING_LEVEL:DEBUG}
-logging.level.org.springframework.security=${SPRING-SECURITY_LOGGING_LEVEL:ERROR}
-logging.level.org.springframework.security.oauth2==${SPRING-SECURITY-OAUTH2_LOGGING_LEVEL:ERROR}
+logging.level.org.springframework.security=${SPRING-SECURITY_LOGGING_LEVEL:DEBUG}
+logging.level.org.springframework.security.oauth2==${SPRING-SECURITY-OAUTH2_LOGGING_LEVEL:DEBUG}
 
 spring.devtools.add-properties=${SPRING_DEVTOOLS:false}
 
