--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -43,9 +43,9 @@ server.ssl.key-alias=clinicaapi
 server.ssl.key-password=Skia@#Nn89s
 
 logging.pattern.console=%d{HH:mm:ss.SSS} [app=@project.name@] [%t] %-5level %logger{36} - %msg%n
-logging.level.root=${APP_LOGGING_LEVEL:DEBUG}
-logging.level.br.com.crptecnologia=${APP_LOGGING_LEVEL:DEBUG}
-logging.level.org.springframework.web=${SPRING-WEB_LOGGING_LEVEL:DEBUG}
+logging.level.root=${APP_LOGGING_LEVEL:INFO}
+logging.level.br.com.crptecnologia=${APP_LOGGING_LEVEL:INFO}
+logging.level.org.springframework.web=${SPRING-WEB_LOGGING_LEVEL:INFO}
 logging.level.org.springframework.security=${SPRING-SECURITY_LOGGING_LEVEL:DEBUG}
 logging.level.org.springframework.security.oauth2==${SPRING-SECURITY-OAUTH2_LOGGING_LEVEL:DEBUG}
 
