--- a/Docker/docker-compose-no-proxy.yml
+++ b/Docker/docker-compose-no-proxy.yml
@@ -13,7 +13,7 @@ services:
       - APP_DEFAULT_USER_NAME=${APP_DEFAULT_USER_NAME}
       - APP_EXIBIR_EXCEPTION_STACKTRACE=${APP_EXIBIR_EXCEPTION_STACKTRACE}
       - APP_EXIBIR_AUTORIZACAO=${APP_EXIBIR_AUTORIZACAO}
-      - APP_IGNORAR_AUTORIZACAO=${APP_IGNORAR_AUTORIZACAO}
+      - APP_HABILITAR_AUTORIZACAO=${APP_HABILITAR_AUTORIZACAO}
       - APP_CORS_ORIGEM=${APP_CORS_ORIGEM}
       - APP_CLAIM_NAME=${APP_CLAIM_NAME}
       - OAUTH_TOKEN_URL=${OAUTH_TOKEN_URL}
