--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -9,7 +9,8 @@ application.resource-report-folder=reports
 application.default-app-name=${APP_DEFAULT_USER_NAME:Base}
 application.exibirStacktrace=${APP_EXIBIR_EXCEPTION_STACKTRACE:true}
 application.exibirAutorizacao=${APP_EXIBIR_AUTORIZACAO:true}
-application.ignorarAutorizacao=${APP_IGNORAR_AUTORIZACAO:false}
+application.habilitar-autorizacao=${APP_HABILITAR_AUTORIZACAO:true}
+
 application.corsOrigin=${APP_CORS_ORIGEM:*}
 application.debugEmail=false
 application.tamanhoMaximoAnexo=1024000
