--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -9,7 +9,7 @@ application.default-app-name=Sistema
 
 application.exibirStacktrace=true
 application.exibirAutorizacao=true
-application.ignorarAutorizacao=true
+application.habilitar-autorizacao=true
 
 application.export-pagination-size=100
 application.resource-report-folder=reports
